Version - 3.0.1 - 
-Post CRAN release version - adding Pete Wagner's functions relating to measuring character exhaustation, added Pete to the authors for paleotree.
-Added another cladogram (an MPT from a 13-taxon analysis) to SongZhangDicrano example dataset
-Added argument verboseWarnings to cal3 functions, modified previous 'warnings' (actually used function for messages) to warnings
-

Version - 3.0.0 - 10-20-17
-Released to CRAN after a long hiatus from new CRAN releases.

Version - 2.9 - 10-20-17
-Bumped up version number, to reflect ongoing development over a long period without CRAN release. (CRAN release coming soon.)
-Added function createMrBayesTipDatingNexus, which creates a full NEXUS script for doing tip-dating analyses in MrBayes.
-Added function obtainDatedPosteriorTreesMrB, which will get the dated trees from the posterior of a MrBayes analysis (or provide an otherwise difficult to obtain summary tree, appropriate for dated analyses).
-Added function treeContradiction, which gives the contradiction difference (CD) value between two topologies, as described in Bapst et al. in press (Syst Biol).
-Added function setRootAge which will add a $root.time element to a tree, given a set of ages for tip taxa, using the age for the youngest matching taxon name,
-Added function setRootAges for setting root ages for a set of many trees as a multiPhylo object,
-Tried changing changelog.txt to .md, then changed it back.
-So, it turns out that ACCTRAN in phangorn was never converted from Fitch algorithm to Sankoff, and thus it was inappropriate for ACCTRAN to be applied to trees with multifurcations. This now results in an error if attempted by a user. Many apologies!
-Added new dataset RaiaCopesRule, containing dated paleo-phylogenies for ammonite genera, ceratopsian species, and cervid species from Raia et al. 2015, along with ammonite trait data from same publication.